--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/calc3pic.jpg" alt=""/></span>
+							<span class="image fit"><img src="images/precalpic.jpg" alt=""/></span>
 							<h3> Precalulus with Trigonometry</h3>
 							<p> A traditional continuation of college algebra.  We studied function notation, real and complex number systems, polynomial, rational, exponential, logarithmic, and trigonometric functions, their properties, and their applications.  </p>
 						</div>
