--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/Chase_Worley.jpg" alt="" /></span>
-							<span class="image fit"><img src="images/Chase_Worley.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/football3.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/farm.jpg" alt="" /></span>
 						</div>
 					</div>
 				</div>
