--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>CV and such...<br />
 							</h2>
 						</header>
-						<a href="images/Chase Worley's CV .pdf" class="button wide primary">CV</a>
+						<a href="" class="button wide primary">CV</a>
 					</div>
 					<!--<div class="col-6 col-12-medium imp-medium">
 						<span class="image fit"><img src="images/Chase_Worley.jpg" alt="" /></span>
