--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 					</h1>
 					<p>I hope that you can find a few interesting <br />
 					tidbits about me, my work, and my passions.</p>
-					<!--<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
-					</ul>-->
+					<ul class="actions special">
+						<li><a href="#one" class="button scrolly">CV and Statements</a></li>
+						<li><a href="#two" class="button scrolly">Background</a></li>
+						<li><a href="#three" class="button scrolly">Papers</a></li>
+						<li><a href="#four" class="button scrolly">Classes</a></li>
+					</ul>
 				</div>
 			</section>
 
@@ -43,6 +46,13 @@
 					<!--<div class="col-6 col-12-medium imp-medium">
 						<span class="image fit"><img src="images/Chase_Worley.jpg" alt="" /></span>
 					</div>-->
+				</div>
+				<div>
+					<p>
+						<ul class="actions special">
+							<li><a href="#header" class="button scrolly">Back to Top</a></li>
+						</ul>
+					</p>
 				</div>
 			</div>
 		</section>
@@ -70,6 +80,9 @@
 							<span class="image fit"><img src="images/farm.jpg" alt="" /></span>
 						</div>
 					</div>
+					<ul class="actions special">
+						<li><a href="#header" class="button scrolly">Back to Top</a></li>
+					</ul>
 				</div>
 			</section>
 
@@ -109,6 +122,9 @@
 								</div>
 						</div>
 					</div>
+					<ul class="actions special">
+						<li><a href="#header" class="button scrolly">Back to Top</a></li>
+					</ul>
 				</div>
 			</section>
 
@@ -165,6 +181,9 @@
 							<p>Topics included logic and proofs, recurrence relations, functions, sets, grpahs, an introduction to formal languages, induction, and other topics.  This course served as the bridge course for both computer science and mathematics students as they moved towards their upper level courses.  A fair amount of time was spent on the students' mathematical writing skills and learning to typeset using LaTeX.    </p>
 						</div>
 					</div>
+					<ul class="actions special">
+						<li><a href="#header" class="button scrolly">Back to Top</a></li>
+					</ul>
 				</div>
 			</section>
 
